# fc-projeto-final

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: EDA.ipynb  ottawa2023-test.ipynb  testing_function.ipynb  train_debug.ipynb
runs/DCNN08_inner_normalized-fft_mby20_bs64_lr0.001_epochs40_seed42/: events.out.tfevents.1750860964.ml5.284731.2
runs/DCNN08_outer_fft_mby20_bs32_lr0.001_epochs4_seed258/: events.out.tfevents.1750860389.ml5.281514.1  events.out.tfevents.1750860424.ml5.284731.0
runs/DCNN08_outer_fft_mby20_bs32_lr0.001_epochs50_seed258/: events.out.tfevents.1750860274.ml5.281514.0
runs/DCNN08_outer_fft_mby20_bs32_lr0.1_epochs50_seed258/: events.out.tfevents.1750860020.ml5.275896.0
runs/DCNN08_outer_normalized-fft_mby20_bs64_lr0.001_epochs40_seed42/: events.out.tfevents.1750860662.ml5.284731.1
runs/DCNN08_outer_time-RG_mby2_bs32_lr0.1_epochs20_seed258/: events.out.tfevents.1750856897.ml5.218815.1  events.out.tfevents.1750858327.ml5.233137.0  events.out.tfevents.1750859007.ml5.256378.0
runs/DCNN08_outer_time_mby2_bs32_lr0.1_epochs20_seed258/: events.out.tfevents.1750859735.ml5.270481.0
runs/DCNN19_outer_normalized-fft_mby20_bs64_lr0.001_epochs40_seed42/: events.out.tfevents.1750861298.ml5.299367.0
src/datasets/: dataloaders.py  dataset_wrapper.py  ottawa2023.py  ottawa2023_old.py  splits.py  transforms.py
src/models/: dcnn.py
src/trainer/: test.py  train.py
wandb/: latest-run
wandb/run-20250623_061240-q1ecniog/: run-q1ecniog.wandb
wandb/run-20250623_061629-7gwoiltk/: run-7gwoiltk.wandb
(+72 files in other folders)
