[project]
name = "fc-projeto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autorootcwd>=1.0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]
